@@ -2,3 +2,5 @@
 
 - Fixed issue where you could not use quick reply for recipients whose names
 contained commas.
+- Make standard keyboard shortcuts work even when the conversation view has
+focus (forward them to the main window).
